namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-x-ray-body-scans-api-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-x-ray-body-scans-api-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    cloud-platform.justice.gov.uk/namespace: "hmpps-x-ray-body-scans-api-preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "connect-dps"
    cloud-platform.justice.gov.uk/slack-alert-channel: "connect-dps-non-prod-alerts"
    cloud-platform.justice.gov.uk/application: "HMPPS X-Ray Body Scans API"
    cloud-platform.justice.gov.uk/owner: "Connect DPS: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-x-ray-body-scans-api.git"
    cloud-platform.justice.gov.uk/team-name: "connect-dps"
